Added button + minor style modifications

--- a/src/components/menu/navbar/NavbarComponent.css
+++ b/src/components/menu/navbar/NavbarComponent.css
@@ -1,6 +1,6 @@
 .navBar {
   position: relative;
-  background-color: #948e8c;
+  background: linear-gradient(45deg, #F1CDB9 10%, #b6aeab 90%);
   z-index: 1;
   text-align: center;
   text-decoration: none;
@@ -26,7 +26,7 @@
 
 a {
   float: left;
-  color: white;
+  color: black;
   text-decoration: none;
   text-align: center;
   padding: 10px 10px;
@@ -37,6 +37,6 @@ a {
 }
 
 a:hover {
-  color: #abe4e4;
+  color: #ffffff;
 }
 /*# sourceMappingURL=NavbarComponent.css.map */
