Added Form component

--- a/src/components/login/loginComponent.scss
+++ b/src/components/login/loginComponent.scss
@@ -44,7 +44,7 @@
     width: 500px;
     top: 0;
     left: 0;
-    background:linear-gradient(45deg, #F1CDB9 10%, #b6aeab 90%) ;
+    background:linear-gradient(45deg, rgb(241, 205, 185) 10%, #b6aeab 90%) ;
     padding-top: 50px;
     padding-bottom: 40px;
     
