--- a/src/components/menu/navbar/NavbarComponent.scss
+++ b/src/components/menu/navbar/NavbarComponent.scss
@@ -31,7 +31,7 @@ a {
   padding: 10px 10px;
   font-size: 12px;
   margin-left: 50px;
-  font-weight: 600;
+  font-weight: bold;
   background-color: transparent;
 }
 
