--- a/src/components/login/loginComponent.scss
+++ b/src/components/login/loginComponent.scss
@@ -107,6 +107,7 @@
     justify-content: center;
 }
 .login-form-btn{
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
