--- a/src/components/menu/navbar/NavbarComponent.css
+++ b/src/components/menu/navbar/NavbarComponent.css
@@ -1,42 +1,1 @@
-.navBar {
-  position: relative;
-  background: linear-gradient(45deg, #F1CDB9 10%, #b6aeab 90%);
-  z-index: 1;
-  text-align: center;
-  text-decoration: none;
-  overflow: hidden;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-#userIcon {
-  float: right;
-  position: relative;
-  font-size: 20px;
-  padding: 0;
-  top: 4px;
-  margin-right: 40px;
-}
-
-.logout {
-  float: right;
-  position: relative;
-  margin-left: 0;
-  margin-right: -35px;
-}
-
-a {
-  float: left;
-  color: black;
-  text-decoration: none;
-  text-align: center;
-  padding: 10px 10px;
-  font-size: 12px;
-  margin-left: 50px;
-  font-weight: 600;
-  background-color: transparent;
-}
-
-a:hover {
-  color: #ffffff;
-}
-/*# sourceMappingURL=NavbarComponent.css.map */
+/* No CSS *//*# sourceMappingURL=NavbarComponent.css.map */
